# stream-fusion

./: Cargo.toml  rustfmt.toml
benches/: vs_tokio_rayon.rs
core/: Cargo.toml
core/examples/: count.rs
core/src/: lib.rs  step.rs
core/src/consumer/: mod.rs  partition.rs
core/src/execution/: yield_by.rs
core/src/stream/: ext.rs  filter.rs  fuse.rs  map.rs  mod.rs  next.rs  skip.rs  step_by.rs  take_while.rs
examples/: count.rs
parallel/: Cargo.toml
parallel/src/: executor.rs  lib.rs
src/: consumer.rs  execution.rs  lib.rs  step.rs  stream.rs  sync.rs
src/consumer/: collect.rs  count.rs  fold.rs  try_collect.rs
src/execution/: mod.rs
src/flat/: consumer.rs  mod.rs  stream.rs
src/stream/: chain.rs  cloned.rs  copied.rs  flat_map.rs  flatten.rs  map_async.rs  mod.rs  skip_while.rs  take.rs  try_next.rs
